<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- 标题 -->
    <LinearLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/iv_return"
            android:padding="10dp"
            android:gravity="center"
            android:clickable="true"
            android:onClick="onClick"
            android:src="@mipmap/ic_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:gravity="center"
            android:textSize="23dp"
            android:textColor="@color/colorWhite"
            android:text="@string/str_menu_mix"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.tencent.ilivedemo.view.DemoEditText
            android:id="@+id/et_room"
            android:inputType="number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="请输入房间号 数字"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/tv_create"
            style="@style/DemoButton"
            android:onClick="onClick"
            android:text="@string/str_btn_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <com.tencent.ilivesdk.view.AVRootView
        android:id="@+id/av_root_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">
        <com.tencent.rtmp.ui.TXCloudVideoView
            android:id="@+id/txcv_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/tv_play_status"
                android:gravity="right"
                android:textColor="@color/colorWhite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tv_msg"
                android:gravity="bottom"
                android:textColor="@color/colorWhite"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
    </RelativeLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_mix_addr"
                android:gravity="left"
                android:textColor="@color/colorWhite"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btn_copy"
                android:text="@string/str_btn_copy"
                android:onClick="onClick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/btn_template1"
                android:text="template1"
                android:onClick="onClick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btn_template2"
                android:text="template2"
                android:onClick="onClick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btn_template3"
                android:text="template3"
                android:onClick="onClick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btn_template4"
                android:text="template2"
                android:onClick="onClick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
